; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_convert_wait_result.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_sync_sema.c_semaphore_convert_wait_result.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i32 0, align 4
@KERN_OPERATION_TIMED_OUT = common dso_local global i32 0, align 4
@KERN_ABORTED = common dso_local global i32 0, align 4
@KERN_TERMINATED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"semaphore_block\0A\00", align 1
@KERN_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @semaphore_convert_wait_result(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %13 [
    i32 131, label %5
    i32 128, label %7
    i32 130, label %9
    i32 129, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %6, i32* %2, align 4
  br label %16

7:                                                ; preds = %1
  %8 = load i32, i32* @KERN_OPERATION_TIMED_OUT, align 4
  store i32 %8, i32* %2, align 4
  br label %16

9:                                                ; preds = %1
  %10 = load i32, i32* @KERN_ABORTED, align 4
  store i32 %10, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* @KERN_TERMINATED, align 4
  store i32 %12, i32* %2, align 4
  br label %16

13:                                               ; preds = %1
  %14 = call i32 @panic(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %15 = load i32, i32* @KERN_FAILURE, align 4
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %13, %11, %9, %7, %5
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
